translations: use American English spelling for "color" instead of British English

--- a/po/ca.po
+++ b/po/ca.po
@@ -299,12 +299,12 @@ msgstr "  --clusters-in-meta-seek  Escriu les dades meta de cerca per als clúst
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           Defineix el nombre de bits codificats per a un\n"
 "                           canal de color. Un valor de 0 indica que el\n"
 "                           nombre està sense especificar.\n"
@@ -312,12 +312,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Estableix els coeficients de la matriu del vídeo\n"
 "                           usada per a derivar els valors de luminància i de\n"
 "                           crominància dels colors primaris vermell, verd i\n"
@@ -326,24 +326,24 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Els colors primaris del vídeo.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   La retallada dels intervals de colors.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   La retallada dels intervals de colors.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           Les característiques de transferència del vídeo.\n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -1023,11 +1023,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                           Coordenades cromàtiques del color blanc com es\n"
 "                           defineixen per la CIE 1931.\n"
 
@@ -4141,7 +4141,7 @@ msgstr "Bits per canal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Bits per canal de color:"
 
 #: src/common/property_element.cpp:213
@@ -4238,12 +4238,12 @@ msgstr "Coordenada Y de crominància del blau definida per la CIE 1931."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Coordenades de «x» per al color blau"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Coordenades de «y» per al color blau"
 
 #: src/input/r_vobsub.cpp:549
@@ -4914,54 +4914,54 @@ msgstr "Tipus de còdec/MIME"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Informació del color"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Meta informació sobre domini del color"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Coeficients de la matriu del color"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Coeficients de la matriu del color:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Colors primaris"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Colors primaris:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Interval del color"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Interval de colors:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Espai de color"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Transferència del color"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7098,12 +7098,12 @@ msgstr "Coordenada Y de crominància del verd definida per la CIE 1931."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Coordenades de «x» per al color verd"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Coordenades de «y» per al color verd"
 
 #: src/common/file_types.cpp:89
@@ -10391,12 +10391,12 @@ msgstr "Coordenada Y de crominància del vermell definida per la CIE 1931."
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Coordenades de «x» per al color vermell"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Coordenades de «y» per al color vermell"
 
 #: src/common/cli_parser.cpp:193
@@ -11168,7 +11168,7 @@ msgstr "Estableix els coeficients de la matriu del vídeo usat per a obtenir els
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Estableix el nombre de bits codificats per a un canal de color."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12144,12 +12144,12 @@ msgstr "Les dades privades del còdec no coincideixen. Ambdues tenen la mateixa 
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "Els colors primaris del vídeo."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "Les característiques de la transferència de color del vídeo."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14659,12 +14659,12 @@ msgstr "Tipus de la relació d'aspecte del vídeo"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Informació dels colors del vídeo"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Metadades de la masterització dels colors del vídeo"
 
 #: src/common/property_element.cpp:162
@@ -14762,7 +14762,7 @@ msgstr "Pista de vídeo %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Vídeo: bits per canal de color"
 
 #: src/common/property_element.cpp:190
@@ -14797,17 +14797,17 @@ msgstr "Vídeo: Y crominància del vermell"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Vídeo: coeficients de la matriu de color"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Vídeo: colors primaris"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Vídeo: interval del color"
 
 #: src/common/property_element.cpp:174
@@ -15131,27 +15131,27 @@ msgstr "Sempre que l'usuari afegeix una llista de reproducció, el programa cerc
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "Coordenada X de crominància del color blanc definida per la CIE 1931."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "Coordenada Y de crominància del color blanc definida per la CIE 1931."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Coordenades de «x» per al color blanc"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Coordenades de «y» per al color blanc"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Coordenades per al color blanc:"
 
 #: src/common/property_element.cpp:154
@@ -16717,7 +16717,7 @@ msgstr "– Establert a «no» –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "Privades del còdec, longitud %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Matriu de color: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
