--- a/po/es.po
+++ b/po/es.po
@@ -297,12 +297,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           Establece el número de bits codificados para un canal\n"
 "                           de color. Un valor de 0 indica que el número no se \n"
 "                           ha específicado. \n"
@@ -310,12 +310,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-" --colour-matrix-coefficients <TID:n>\n"
+" --color-matrix-coefficients <TID:n>\n"
 "                           Establece los coeficientes de la matriz del\n"
 "                           vídeo usado para generar los valores de luminancia y\n"
 "                           crominancia a partir de los colores primarios rojo, verde \n"
@@ -324,24 +324,24 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Los colores primarios del vídeo.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   Recorte de rangos de color.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   Recorte de rangos de color.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           Las características de transferencia del vídeo. \n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -1035,11 +1035,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                           Coordenadas cromáticas de color blanco\n"
 "                           definida por CIE 1931.\n"
 
@@ -4172,7 +4172,7 @@ msgstr "Bits por canal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Bits por canal de color:"
 
 #: src/common/property_element.cpp:213
@@ -4269,12 +4269,12 @@ msgstr "Coordenada cromática Y del azul definida por CIE 1931."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Color azul, coordenada X"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Color azul, coordenada Y"
 
 #: src/input/r_vobsub.cpp:549
@@ -4945,54 +4945,54 @@ msgstr "Tipo Codec/MIME"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Información de color"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Información meta de masterización de color"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Coeficientes de matriz del códec"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Coeficientes de la matriz de color:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Primarias del códec"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Colores primarios:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Rango de color"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Rango de color:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Espacio de color"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Transferencia de color"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7128,12 +7128,12 @@ msgstr "Coordenada cromática Y del verde definida por CIE 1931."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Color verde, coordenada X"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Color verde, coordenada Y"
 
 #: src/common/file_types.cpp:89
@@ -10431,12 +10431,12 @@ msgstr "Coordenada cromática Y del rojo definida por CIE 1931."
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Color rojo, coordenada X"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Color rojo, coordenada Y"
 
 #: src/common/cli_parser.cpp:193
@@ -11209,7 +11209,7 @@ msgstr "Establece los coeficientes de la matriz del vídeo usado para generar lo
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Establece el número de bits codificados para un canal de color."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12188,12 +12188,12 @@ msgstr "Los datos particulares del códec no coinciden. Ambos tienen la misma ex
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "Los colores primarios del vídeo."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "Las características de transferencia de color del vídeo."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14705,12 +14705,12 @@ msgstr "Tipo de relación de aspecto del vídeo"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Información del color del vídeo"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Metadatos de masterización del color del vídeo"
 
 #: src/common/property_element.cpp:162
@@ -14808,7 +14808,7 @@ msgstr "Pista de vídeo %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Video: bits por cada canal de color"
 
 #: src/common/property_element.cpp:190
@@ -14843,17 +14843,17 @@ msgstr "Video: cromaticidad X del rojo"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Video: coeficientes de matriz de color"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Video: colores primarios"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Video: rango de color"
 
 #: src/common/property_element.cpp:174
@@ -15177,27 +15177,27 @@ msgstr "Siempre que el usuario agrega un playlist, automáticamente el programa 
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "Coordenada cromática X del color blanco definida por CIE 1931."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "Coordenada cromática Y del color blanco definida por CIE 1931."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Color blanco, coordenada X"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Color blanco, coordenada Y"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Coordenadas de color blanco:"
 
 #: src/common/property_element.cpp:154
@@ -16770,7 +16770,7 @@ msgstr "– Establecer a ninguno –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "Extensión del códec partícular (CodecPrivate) %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Matriz de color: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
