--- a/po/eu.po
+++ b/po/eu.po
@@ -275,12 +275,12 @@ msgstr "  --clusters-in-meta-seek  Kluster meta bilaketa datuak idazten ditu.\n"
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           Margo kanal batentzat kodeatutako bit zenbatekoa\n"
 "                           ezartzen du. 0 balioak adierazten du zenbatekoa\n"
 "                           zehaztugabea dela.\n"
@@ -288,12 +288,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-"  --colour-matrix <TID:n>  Gorri, orlegi eta urdin lehen margoetatik\n"
+"  --color-matrix <TID:n>  Gorri, orlegi eta urdin lehen margoetatik\n"
 "                                               argitasun eta margotasun eratorpena egiteko\n"
 "                                               erabilitako bideoaren matrize ezaugarriak\n"
 "                                               ezartzen ditu.\n"
@@ -301,24 +301,24 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Bideoaren lehen margoak.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   Margo mailen ebaketa.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   Margo mailen ebaketa.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           Bideoaren eskualdaketa ezaugarriak.\n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -711,7 +711,7 @@ msgid ""
 "  --projection-pose-pitch <TID:float>\n"
 "                           A pitch rotation to the projection.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Bideoaren lehen margoak.\n"
 
 #: src/merge/mkvmerge.cpp:362
@@ -720,7 +720,7 @@ msgid ""
 "  --projection-pose-roll <TID:float>\n"
 "                           A roll rotation to the projection.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Bideoaren lehen margoak.\n"
 
 #: src/merge/mkvmerge.cpp:358
@@ -729,7 +729,7 @@ msgid ""
 "  --projection-pose-yaw <TID:float>\n"
 "                           A yaw rotation to the projection.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Bideoaren lehen margoak.\n"
 
 #: src/merge/mkvmerge.cpp:355
@@ -749,7 +749,7 @@ msgid ""
 "  --projection-type <TID:method>\n"
 "                           Projection method used (0–3).\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Bideoaren lehen margoak.\n"
 
 #: src/merge/mkvmerge.cpp:276
@@ -969,11 +969,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                           Margo zuriaren margotasun antolakuntza\n"
 "                           CIE 1931-n zehaztuta bezala.\n"
 
@@ -4074,7 +4074,7 @@ msgstr "Bit bideko"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, fuzzy, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Bideoa: bit margo bide bakoitzeko"
 
 #: src/common/property_element.cpp:213
@@ -4171,12 +4171,12 @@ msgstr "Margo urdinaren margotasunaren Y ardatza CIE 1931-k zehaztu bezala."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Margo urdinaren x ardatza"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Margo urdinaren y ardatza"
 
 #: src/input/r_vobsub.cpp:549
@@ -4846,54 +4846,54 @@ msgstr "Kodek/MIME mtoa"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Margo argibideak"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Margo masteritzatze meta argibideak"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Margo matrize ezaugarriak"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Margo matrize ezaugarriak"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Margo lehenak"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, fuzzy, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Margo lehenak"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Margo maila"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, fuzzy, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Margo maila"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Margo tartea"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Margo eskualdeketa"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7031,12 +7031,12 @@ msgstr "Margo orlegiaren margotasunaren Y ardatza CIE 1931-k zehaztu bezala."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Margo orlegiaren x ardatza"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Margo orlegiaren y ardatza"
 
 #: src/common/file_types.cpp:89
@@ -10323,12 +10323,12 @@ msgstr "Margo gorriaren margotasunaren Y ardatza CIE 1931-k zehaztu bezala."
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Margo gorriaren x ardatza"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Margo gorriaren y ardatza"
 
 #: src/common/cli_parser.cpp:193
@@ -11099,14 +11099,14 @@ msgstr "Bide honek erabiltzeko galeragabeko konpresio algoritmoa ezartzen du."
 #, fuzzy, no-c-format
 msgid "Sets the matrix coefficients of the video used to derive luma and chroma values from red, green and blue color primaries."
 msgstr ""
-"  --colour-matrix <TID:n>  Gorri, orlegi eta urdin lehen margoetatik\n"
+"  --color-matrix <TID:n>  Gorri, orlegi eta urdin lehen margoetatik\n"
 "                                               argitasun eta margotasun eratorpena egiteko\n"
 "                                               erabilitako bideoaren matrize ezaugarriak\n"
 "                                               ezartzen ditu.\n"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Margo bide batentzat kodeatutako bit zenbatekoa ezartzen du."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12090,12 +12090,12 @@ msgstr "Kodekaren datu pribatuak ez datoz bat. Biek luzera berdina dute ({0}), b
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "Bideoaren margo lehenak."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "Bideoaren margo eskualdaketa ezaugarriak."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14605,12 +14605,12 @@ msgstr "Bideo ikuspegi maila mota"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Bideoaren margo argibideak"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Bideo margo masterizatze metadatuak"
 
 #: src/common/property_element.cpp:162
@@ -14708,7 +14708,7 @@ msgstr "Bideo bidea %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Bideoa: bit margo bide bakoitzeko"
 
 #: src/common/property_element.cpp:190
@@ -14743,17 +14743,17 @@ msgstr "Bideoa: margotasun gorria Y"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Bideoa: margo matrize ezaugarriak"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Bideoa: margo lehenak"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Bideoa: margo maila"
 
 #: src/common/property_element.cpp:174
@@ -15077,27 +15077,27 @@ msgstr "Erabiltzaileak irakur zerrenda bat gehitzen duenean programak berezgaita
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "Margo zuriaren margotasunaren X ardatza CIE 1931-k zehaztu bezala."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "Margo zuriaren margotasunaren Y ardatza CIE 1931-k zehaztu bezala."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Margo zuriaren x ardatza"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Margo zuriaren y ardatza"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, fuzzy, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Margo zuriaren x ardatza"
 
 #: src/common/property_element.cpp:154
@@ -17393,7 +17393,7 @@ msgstr "– Ezarri ezer ez bezala –"
 #~ msgid "Collapse all entries so that none of their sub-entries will be shown"
 #~ msgstr "Bildu sarrera guztiak beren azpi-sarrerak ez erakusteko bezala"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Margo matrizea: %1%"
 
 #~ msgid "Command line copied to clipboard."
