--- a/po/fr.po
+++ b/po/fr.po
@@ -272,12 +272,12 @@ msgstr "  --clusters-in-meta-seek  Écrit les métadonnées de positionnement po
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           Définit le nombre de bits codés pour un canal de\n"
 "                           couleur. Une valeur de 0 indique que le nombre\n"
 "                           n'est pas spécifié.\n"
@@ -285,12 +285,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Définit les coefficients de matrice de la vidéo utilisés pour\n"
 "                           déduire les valeurs de luma et chroma depuis les couleurs  rouge, vert\n"
 "                           et bleu primaires.\n"
@@ -298,24 +298,24 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Les couleurs primaires de la vidéo.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   Coupure selon les limites de couleurs.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   Coupure selon les limites de couleurs.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           Les caractéristiques de transfert de la vidéo.\n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -973,11 +973,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                           Coordonnées de la chromaticité de la couleur blanche définie\n"
 "                           selon CIE 1931.\n"
 
@@ -4095,7 +4095,7 @@ msgstr "Bits par canal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Bits par canal de couleur :"
 
 #: src/common/property_element.cpp:213
@@ -4192,12 +4192,12 @@ msgstr "Coordonnée de chromaticité Y du bleu telle que définie par CIE 1931."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Coordonnées x couleur bleu"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Coordonnées y couleur bleu"
 
 #: src/input/r_vobsub.cpp:549
@@ -4868,54 +4868,54 @@ msgstr "Codec/Type MIME"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Informations sur les couleurs"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Méta informations sur le matriçage des couleurs"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Coefficients de la matrice de couleurs"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Coefficients de la matrice de couleurs :"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Couleurs primaires"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Couleurs primaires :"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Limites de couleurs"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Plage de couleurs :"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Espace de couleurs"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Transfert de couleurs"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7051,12 +7051,12 @@ msgstr "Coordonnée de chromaticité Y du vert telle que définie par CIE 1931."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Coordonnées x couleur vert"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Coordonnées y couleur vert"
 
 #: src/common/file_types.cpp:89
@@ -10351,12 +10351,12 @@ msgstr "Coordonnée de chromaticité Y du rouge telle que définie par CIE 1931.
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Coordonnées x couleur rouge"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Coordonnées y couleur rouge"
 
 #: src/common/cli_parser.cpp:193
@@ -11129,7 +11129,7 @@ msgstr "Définit les coefficients de matrice de la vidéo utilisés pour déduir
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Définit le nombre de bits codés pour un canal de couleurs."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12108,12 +12108,12 @@ msgstr "Les données privées du codec ne correspondent pas, elles ont la même 
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "Les couleurs primaires de la vidéo."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "Les caractéristiques du transfert de couleurs de la vidéo."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14631,12 +14631,12 @@ msgstr "Type de ratio d'aspect vidéo"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Informations de couleur vidéo"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Métadonnées de mastérisation des couleurs vidéo"
 
 #: src/common/property_element.cpp:162
@@ -14734,7 +14734,7 @@ msgstr "Piste vidéo %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Vidéo : bits par canal de couleur"
 
 #: src/common/property_element.cpp:190
@@ -14769,17 +14769,17 @@ msgstr "Vidéo : chromaticité rouge Y"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Vidéo : coefficients de la matrice de couleurs"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Vidéo : couleurs primaires"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Vidéo : plage de couleurs"
 
 #: src/common/property_element.cpp:174
@@ -15103,27 +15103,27 @@ msgstr "Quand l'utilisateur ajoute une liste de lecture, le programme peut autom
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "Coordonnée de chromaticité X du blanc telle que définie par CIE 1931."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "Coordonnée de chromaticité Y du blanc telle que définie par CIE 1931."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Coordonnées x couleur blanche"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Coordonnées y couleur blanche"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Coordonnées de couleur blanche :"
 
 #: src/common/property_element.cpp:154
@@ -16646,7 +16646,7 @@ msgstr "– Défini à aucun –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "Données de codec privées, longueur %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Matrice de couleurs : %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
