--- a/po/pl.po
+++ b/po/pl.po
@@ -269,8 +269,8 @@ msgstr "  --clusters-in-meta-seek Zapisuje dane indeksu wyszukiwania do klastró
 #: src/merge/mkvmerge.cpp:315
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
@@ -282,7 +282,7 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
@@ -295,21 +295,21 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
 "  --command-line-charset <znaki>\n"
 "                                  Zestaw znaków dla linii komend.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
 msgstr ""
 
 #: src/merge/mkvmerge.cpp:331
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
 "  --command-line-charset <znaki>\n"
@@ -963,8 +963,8 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, fuzzy, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
 "  --split frames:A[,B...]\n"
@@ -4076,7 +4076,7 @@ msgstr "Bitów na kanał"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, fuzzy, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Bitów na kanał"
 
 #: src/common/property_element.cpp:213
@@ -4173,12 +4173,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr ""
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr ""
 
 #: src/input/r_vobsub.cpp:549
@@ -4849,54 +4849,54 @@ msgstr "Kodek/Typ MIME"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, fuzzy, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "DV wideo format"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, fuzzy, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Błąd podczas zapisywania informacji"
 
 #: src/common/kax_element_names.cpp:125
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "DV wideo format"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "DV wideo format"
 
 #: src/common/kax_element_names.cpp:135
 #, fuzzy, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Przestrzeń koloru: {0}"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, fuzzy, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Przestrzeń koloru: {0}"
 
 #: src/common/kax_element_names.cpp:133
 #, fuzzy, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Przestrzeń koloru: {0}"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, fuzzy, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Przestrzeń koloru: {0}"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Przestrzeń koloru"
 
 #: src/common/kax_element_names.cpp:134
 #, fuzzy, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Przestrzeń koloru: {0}"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7032,12 +7032,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr ""
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr ""
 
 #: src/common/file_types.cpp:89
@@ -10334,12 +10334,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr ""
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr ""
 
 #: src/common/cli_parser.cpp:193
@@ -11115,7 +11115,7 @@ msgstr ""
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Ustawia liczbę zakodowanych bitów dla kanału koloru."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12104,12 +12104,12 @@ msgstr "Dane własne kodeka nie pasują do siebie. Oba maja taką samą długoś
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr ""
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr ""
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14623,12 +14623,12 @@ msgstr "Typ proporcji obrazu"
 
 #: src/common/kax_element_names.cpp:124
 #, fuzzy, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "DV wideo format"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr ""
 
 #: src/common/property_element.cpp:162
@@ -14726,7 +14726,7 @@ msgstr "Ścieżka wideo %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr ""
 
 #: src/common/property_element.cpp:190
@@ -14761,17 +14761,17 @@ msgstr ""
 
 #: src/common/property_element.cpp:170
 #, fuzzy, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "DV wideo format"
 
 #: src/common/property_element.cpp:180
 #, fuzzy, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "DV wideo format"
 
 #: src/common/property_element.cpp:178
 #, fuzzy, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "DV wideo format"
 
 #: src/common/property_element.cpp:174
@@ -15095,27 +15095,27 @@ msgstr "Za każdym razem, gdy użytkownik dodaje listę odtwarzania Blu-ray (.mp
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr ""
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr ""
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr ""
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, fuzzy, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "DV wideo format"
 
 #: src/common/property_element.cpp:154
@@ -16685,7 +16685,7 @@ msgstr "– Ustaw na żadne –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "CodecPrivate, długość %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Przestrzeń koloru: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
