--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -283,12 +283,12 @@ msgstr "  --clusters-in-meta-seek  Escreve dados de metabusca para cada cluster.
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           Define o número de bits codificados para um canal\n"
 "                           de cor. Um valor de 0 indica que o número não é\n"
 "                           especificado.\n"
@@ -296,12 +296,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Define os coeficientes da matriz do vídeo usados\n"
 "                           para derivar os valores de luma e croma das\n"
 "                           cores primárias vermelho, verde e azul.\n"
@@ -309,24 +309,24 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           As cores primárias do vídeo.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   Recorte da gama de cores.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   Recorte da gama de cores.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           As características de transferência do vídeo.\n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -999,11 +999,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                           Coordenadas de cromaticidade Branco como\n"
 "                           definido por CIE 1931.\n"
 
@@ -4118,7 +4118,7 @@ msgstr "Bits por canal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Bits por canal de cor:"
 
 #: src/common/property_element.cpp:213
@@ -4215,12 +4215,12 @@ msgstr "Coordenadas de cromaticidade Azul Y como definido pelo CIE 1931."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Coordenada x da cor azul"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Coordenada y da cor azul"
 
 #: src/input/r_vobsub.cpp:549
@@ -4891,54 +4891,54 @@ msgstr "Tipo MIME/Codec"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Informações das cores"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Metainformações de masterização de cores"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Coeficientes da matriz de cores"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Coeficiente da matriz de cores:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Cores primárias"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Cores primárias:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Gama de cores"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Gama de cores:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Espaço de cores"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Transferência de cores"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7074,12 +7074,12 @@ msgstr "Coordenadas de cromaticidade Verde Y como definido pelo CIE 1931."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Coordenada x da cor verde"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Coordenada y da cor verde"
 
 #: src/common/file_types.cpp:89
@@ -10375,12 +10375,12 @@ msgstr "Coordenadas de cromaticidade Vermelho Y como definido pelo CIE 1931."
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Coordenada x da cor vermelha"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Coordenada y da cor vermelha"
 
 #: src/common/cli_parser.cpp:193
@@ -11153,7 +11153,7 @@ msgstr "Define os coeficientes da matriz do vídeo usados para derivar os valore
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Define o número de bits codificados para um canal de cor."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12132,12 +12132,12 @@ msgstr "Os dados privados do codec não coincidem. Ambos têm a mesma extensão 
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "As cores primárias do vídeo."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "As características de transferência de cores do vídeo."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14649,12 +14649,12 @@ msgstr "Tipo de relação de aspecto do vídeo"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Informações de cores do vídeo"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Metadados de masterização de cores do vídeo"
 
 #: src/common/property_element.cpp:162
@@ -14752,7 +14752,7 @@ msgstr "Faixa de vídeo %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Vídeo: bits por canal de cor"
 
 #: src/common/property_element.cpp:190
@@ -14787,17 +14787,17 @@ msgstr "Vídeo: cromaticidade vermelho Y"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Vídeo: coeficientes da matriz de cores"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Vídeo: cores primárias"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Vídeo: gama de cores"
 
 #: src/common/property_element.cpp:174
@@ -15121,27 +15121,27 @@ msgstr "Sempre que o usuário adiciona uma lista de reprodução, o programa pod
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "Coordenadas X de cromaticidade Branco como definido por CIE 1931."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "Coordenadas Y de cromaticidade Branco como definido por CIE 1931."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Coordenada x da cor branca"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Coordenada y da cor branca"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Coordenadas de cor branca:"
 
 #: src/common/property_element.cpp:154
@@ -16629,7 +16629,7 @@ msgstr "– Definido para nada –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "Codec privado, extensão %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Espaço de cor: %1%"
 
 #~ msgid "Countr&y:"
