--- a/po/sr_RS@latin.po
+++ b/po/sr_RS@latin.po
@@ -272,8 +272,8 @@ msgstr "  --clusters-in-meta-seek  Zapiši meta seek podatke za klastere.\n"
 #: src/merge/mkvmerge.cpp:315
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
@@ -285,7 +285,7 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
@@ -298,21 +298,21 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Primarne boje videa.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
 msgstr ""
 
 #: src/merge/mkvmerge.cpp:331
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
 "  --command-line-charset <charset>\n"
@@ -959,8 +959,8 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, fuzzy, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
 "  --split frames:A[,B...]\n"
@@ -4073,7 +4073,7 @@ msgstr "Bitova po kanalu"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, fuzzy, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Bitova po kanalu"
 
 #: src/common/property_element.cpp:213
@@ -4170,12 +4170,12 @@ msgstr "Plava Y koordinata hromatičnosti prema definiciji CIE 1931."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Koordinata x plave boje"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Koordinata y plave boje"
 
 #: src/input/r_vobsub.cpp:549
@@ -4846,55 +4846,55 @@ msgstr "Kodek/MIME tip"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Kolorna informacija"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, fuzzy, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Greška prilikom snimanja informacije"
 
 #: src/common/kax_element_names.cpp:125
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients"
-msgstr "Video colour information"
+msgid "Color matrix coefficients"
+msgstr "Video color information"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients:"
-msgstr "Video colour information"
+msgid "Color matrix coefficients:"
+msgstr "Video color information"
 
 #: src/common/kax_element_names.cpp:135
 #, fuzzy, no-c-format
-msgid "Colour primaries"
-msgstr "Colour primaries: {0}"
+msgid "Color primaries"
+msgstr "Color primaries: {0}"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, fuzzy, no-c-format
-msgid "Colour primaries:"
-msgstr "Colour primaries: {0}"
+msgid "Color primaries:"
+msgstr "Color primaries: {0}"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Kolorni opseg"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, fuzzy, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Kolorni opseg"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Kolorni prostor"
 
 #: src/common/kax_element_names.cpp:134
 #, fuzzy, no-c-format
-msgid "Colour transfer"
-msgstr "Colour transfer: {0}"
+msgid "Color transfer"
+msgstr "Color transfer: {0}"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
 #, no-c-format
@@ -7032,12 +7032,12 @@ msgstr "Zelena Y koordinata hromatičnosti prema definiciji CIE 1931."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Koordinata x zelene boje"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Koordinata y zelene boje"
 
 #: src/common/file_types.cpp:89
@@ -10339,12 +10339,12 @@ msgstr "Crvena Y koordinata hromatičnosti prema definiciji CIE 1931."
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Koordinata x crvene boje"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Koordinata y crvene boje"
 
 #: src/common/cli_parser.cpp:193
@@ -11120,7 +11120,7 @@ msgstr ""
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr ""
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12109,12 +12109,12 @@ msgstr "Lični podaci kodeka se ne slažu. Oba imaju istu dužinu ({0}) ali razl
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr ""
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr ""
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14626,13 +14626,13 @@ msgstr "Tip video formata slike"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
-msgstr "Video colour information"
+msgid "Video color information"
+msgstr "Video color information"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
-msgstr "Video colour mastering metadata"
+msgid "Video color mastering metadata"
+msgstr "Video color mastering metadata"
 
 #: src/common/property_element.cpp:162
 #, no-c-format
@@ -14704,7 +14704,7 @@ msgstr "Video projekcija"
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:629
 #, fuzzy, no-c-format
 msgid "Video projection information"
-msgstr "Video colour information"
+msgstr "Video color information"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2173
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2203
@@ -14729,7 +14729,7 @@ msgstr "Video staza %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr ""
 
 #: src/common/property_element.cpp:190
@@ -14764,18 +14764,18 @@ msgstr ""
 
 #: src/common/property_element.cpp:170
 #, fuzzy, no-c-format
-msgid "Video: colour matrix coefficients"
-msgstr "Video colour information"
+msgid "Video: color matrix coefficients"
+msgstr "Video color information"
 
 #: src/common/property_element.cpp:180
 #, fuzzy, no-c-format
-msgid "Video: colour primaries"
-msgstr "Video colour information"
+msgid "Video: color primaries"
+msgstr "Video color information"
 
 #: src/common/property_element.cpp:178
 #, fuzzy, no-c-format
-msgid "Video: colour range"
-msgstr "Video colour information"
+msgid "Video: color range"
+msgstr "Video color information"
 
 #: src/common/property_element.cpp:174
 #, fuzzy, no-c-format
@@ -15098,27 +15098,27 @@ msgstr "Uvek kada korisnik doda plejlistu program može automatski da skenira di
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "X koordinata hromatičnosti Bele boje prema definiciji CIE 1931."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "Y koordinata hromatičnosti Bele boje prema definiciji CIE 1931."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Koordinata x bele boje"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Koordinata y bele boje"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, fuzzy, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Koordinata x bele boje"
 
 #: src/common/property_element.cpp:154
@@ -16689,8 +16689,8 @@ msgstr "– ništa –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "CodecPrivate, dužina %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
-#~ msgstr "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
+#~ msgstr "Color matrix: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
 #~ msgstr "Kompajlovano sa libebml %1 + libmatroska %2."
