--- a/po/tr.po
+++ b/po/tr.po
@@ -272,12 +272,12 @@ msgstr "  --clusters-in-meta-seek  Kümeler için üst arama verisini yaz.\n"
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           Bir renk kanalı için kodlanmış bit sayısını \n"
 "                           ayarlar. 0 değeri, sayının belirtilmemiş olduğunu\n"
 "                           gösterir.\n"
@@ -285,12 +285,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Luma ve chroma değerlerini kırmızı, yeşil ve mavi\n"
 "                           renk önceliklerinden türetmek için kullanılan görüntünün\n"
 "                           matriks katsayılarını ayarlar.\n"
@@ -298,24 +298,24 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Görüntünün renk öncelikleri.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   Renk paletlerinin kırpılması.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   Renk paletlerinin kırpılması.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           Görüntünün aktarım karakteristikleri.\n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -969,11 +969,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                           CIE 1931 tarafından tanımlanan Beyaz renk renklilik koordinatları.\n"
 
 #: src/merge/mkvmerge.cpp:211
@@ -4069,7 +4069,7 @@ msgstr "Kanal başına bit"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Renk kanalı başına bit:"
 
 #: src/common/property_element.cpp:213
@@ -4166,12 +4166,12 @@ msgstr "CIE 1931 tarafından tanımlanan Mavi Y renklilik koordinatı."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Mavi renk x koordinatı"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Mavi renk y koordinatı"
 
 #: src/input/r_vobsub.cpp:549
@@ -4841,54 +4841,54 @@ msgstr "Kodek/MIME türü"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Renk bilgileri"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Renk yönetme üst bilgileri"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Renk matrisi katsayıları"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Renk matrisi katsayıları:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Renk öncelikleri"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Renk öncelikleri:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Renk paleti"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Renk paleti:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Renk alanı"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Renk aktarımı"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7023,12 +7023,12 @@ msgstr "CIE 1931 tarafından tanımlanan Yeşil Y renklilik koordinatı."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Yeşil renk x koordinatı"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Yeşil renk y koordinatı"
 
 #: src/common/file_types.cpp:89
@@ -10314,12 +10314,12 @@ msgstr "CIE 1931 tarafından tanımlanan Kırmızı Y renklilik koordinatı."
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Kırmızı renk x koordinatı"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Kırmızı renk y koordinatı"
 
 #: src/common/cli_parser.cpp:193
@@ -11090,7 +11090,7 @@ msgstr "Luma ve chroma değerlerini kırmızı, yeşil ve mavi renk öncelikleri
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Renk kanalı için birtakım kodlanmış bit'leri ayarlar."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12066,12 +12066,12 @@ msgstr "Kodek'in özel verisi eşleşmiyor. Her ikisi de aynı uzunluğa sahip (
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "Görüntünün renk öncelikleri."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "Görüntünün renk aktarım karakteristikleri."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14580,12 +14580,12 @@ msgstr "Görüntü en-boy oranı türü"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Görüntü rengi bilgileri"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Görüntü rengi yönetme üstverisi"
 
 #: src/common/property_element.cpp:162
@@ -14683,7 +14683,7 @@ msgstr "Görüntü izi %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Görüntü: renk kanalı başına bit"
 
 #: src/common/property_element.cpp:190
@@ -14718,17 +14718,17 @@ msgstr "Görüntü: renklilik kırmızı Y"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Görüntü: renk matrisi katsayıları"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Görüntü: renk öncelikleri"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Görüntü: renk paleti"
 
 #: src/common/property_element.cpp:174
@@ -15052,27 +15052,27 @@ msgstr "Kullanıcı her ne zaman bir çalma listesi eklerse program otomatik ola
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "CIE 1931 tarafından tanımlanan beyaz renk renklilik koordinatı X."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "CIE 1931 tarafından tanımlanan beyaz renk renklilik koordinatı Y."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Beyaz renk x koordinatı"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Beyaz renk y koordinatı"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Beyaz renk koordinatları:"
 
 #: src/common/property_element.cpp:154
@@ -16644,7 +16644,7 @@ msgstr "– Hiçbiri olarak ayarla –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "CodecPrivate, uzunluk %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Renk matriksi: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
