--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -266,48 +266,48 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           設定色彩通道的編碼位元數。\n"
 "                           值為 0 表示未指定該數位。\n"
 
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-" --colour-matrix-coefficients <TID:n>\n"
+" --color-matrix-coefficients <TID:n>\n"
 "                          設定用於視訊中紅、綠、藍原色\n"
 "\\v                          衍生的亮度(luma)和色度值(chroma)矩陣係數。\n"
 
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           視訊的色彩原色。\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   色彩範圍的剪裁。\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   色彩範圍的剪裁。\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           視訊的色彩轉換類型。\n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -952,11 +952,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                           CIE 1931 定義的白色色度座標。\n"
 
 #: src/merge/mkvmerge.cpp:211
@@ -4033,7 +4033,7 @@ msgstr "每頻道取樣多少位元"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "每色彩通道位元:"
 
 #: src/common/property_element.cpp:213
@@ -4130,12 +4130,12 @@ msgstr "由 CIE 1931 定義的藍色 Y 色度座標。"
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "藍色座標 x"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "藍色座標 y"
 
 #: src/input/r_vobsub.cpp:549
@@ -4804,54 +4804,54 @@ msgstr "編碼器/MIME 類型"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "色彩資訊"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "色彩匯流中繼資訊"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "色彩參照係數"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "色彩參照係數:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "主要色彩"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "主要色彩:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "色彩範圍"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "色彩範圍:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "色彩空間(色域)"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "色彩轉換"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -6985,12 +6985,12 @@ msgstr "由 CIE 1931 定義的綠色 Y 色度座標。"
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "綠色座標 x"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "綠色座標 y"
 
 #: src/common/file_types.cpp:89
@@ -10267,12 +10267,12 @@ msgstr "由 CIE 1931 定義的紅色 Y 色度座標。"
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "紅色座標 x"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "紅色座標 y"
 
 #: src/common/cli_parser.cpp:193
@@ -11041,7 +11041,7 @@ msgstr "設定用於視訊中紅、綠、藍原色衍生的亮度(luma)和色度
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "設定色彩通道的編碼位數。"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12014,12 +12014,12 @@ msgstr "編碼器專有資料不符。長度相同 ({0}) 但內容不同。"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "視訊的色彩原色。"
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "視訊的色彩轉換類型。"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14527,12 +14527,12 @@ msgstr "視訊外觀比例類型"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "視訊色彩資訊"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "視訊色彩控制中繼資料"
 
 #: src/common/property_element.cpp:162
@@ -14630,7 +14630,7 @@ msgstr "視訊軌 %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "視訊: 每色彩通道位元"
 
 #: src/common/property_element.cpp:190
@@ -14665,17 +14665,17 @@ msgstr "視訊: 紅色色度 Y"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "視訊: 矩陣色彩係數"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "視訊: 主要色彩"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "視訊: 色彩範圍"
 
 #: src/common/property_element.cpp:174
@@ -14999,27 +14999,27 @@ msgstr "當使用者加入播放清單時程式都會自動掃描其他播放清
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "由 CIE 1931 定義的白色 X 色度座標。"
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "由 CIE 1931 定義的白色 Y 色度座標。"
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "白色座標 x"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "白色座標 y"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "白色座標:"
 
 #: src/common/property_element.cpp:154
@@ -16530,7 +16530,7 @@ msgstr "– 設定為無 –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "編解碼器專有, 長度 %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "顏色矩陣: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
