--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -3159,8 +3159,8 @@ msgstr "Définit les paramètres de déformation des pixels d'une piste vidéo s
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1813
-msgid "<option>--colour-matrix-coefficients</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-matrix-coefficients</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-matrix-coefficients</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-matrix-coefficients</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1816
@@ -3181,12 +3181,12 @@ msgstr "<constant>0</constant>: GBR, <constant>1</constant>: BT709, <constant>2<
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1834
-msgid "<option>--colour-bits-per-channel</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-bits-per-channel</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-bits-per-channel</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-bits-per-channel</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1837
-msgid "Sets the number of coded bits for a colour channel. A value of <constant>0</constant> indicates that the number of bits is unspecified."
+msgid "Sets the number of coded bits for a color channel. A value of <constant>0</constant> indicates that the number of bits is unspecified."
 msgstr "Définit le nombre de bits codés pour un canal de couleur. Une valeur de <constant>0</constant> indique que le nombre de bits n'est pas spécifié."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
@@ -3231,8 +3231,8 @@ msgstr "Définit comment la chroma est localisée horizontalement/verticalement.
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1884
-msgid "<option>--colour-range</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-range</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-range</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-range</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1887
@@ -3241,8 +3241,8 @@ msgstr "Définit l'écrêtage de l'intervalle de couleurs (<constant>0</constant
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1894
-msgid "<option>--colour-transfer-characteristics</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-transfer-characteristics</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-transfer-characteristics</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-transfer-characteristics</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1897
@@ -3251,17 +3251,17 @@ msgstr "Les caractéristiques de transfert de la vidéo."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1905
-msgid "<constant>0</constant>: reserved, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: reserved, <constant>4</constant>: gamma 2.2 curve, <constant>5</constant>: gamma 2.8 curve, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: linear, <constant>9</constant>: log, <constant>10</constant>: log sqrt, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended colour gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
+msgid "<constant>0</constant>: reserved, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: reserved, <constant>4</constant>: gamma 2.2 curve, <constant>5</constant>: gamma 2.8 curve, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: linear, <constant>9</constant>: log, <constant>10</constant>: log sqrt, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended color gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
 msgstr "<constant>0</constant>: réservé, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: non spécifié, <constant>3</constant>: réservé, <constant>4</constant>: courbe gamma 2.2, <constant>5</constant>: courbe gamma 2.8, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: linéaire, <constant>9</constant>: log, <constant>10</constant>: racine de log, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>:  gamut de couleur étendu ITU-R BT.1361, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1916
-msgid "<option>--colour-primaries</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-primaries</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-primaries</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-primaries</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1919
-msgid "Sets the colour primaries of the video."
+msgid "Sets the color primaries of the video."
 msgstr "Définit les couleurs primaires de la vidéo."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
@@ -3301,12 +3301,12 @@ msgstr "Définit les coordonnées de chromaticité du rouge/vert/bleu définies 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1967
-msgid "<option>--white-colour-coordinates</option> <parameter>TID:x,y</parameter>"
-msgstr "<option>--white-colour-coordinates</option> <parameter>TID:x,y</parameter>"
+msgid "<option>--white-color-coordinates</option> <parameter>TID:x,y</parameter>"
+msgstr "<option>--white-color-coordinates</option> <parameter>TID:x,y</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1970
-msgid "Sets the white colour chromaticity coordinates as defined by CIE 1931."
+msgid "Sets the white color chromaticity coordinates as defined by CIE 1931."
 msgstr "Définit les coordonnées de chromaticité du blanc définies selon CIE 1931."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
