--- a/doc/man/po4a/po/ja.po
+++ b/doc/man/po4a/po/ja.po
@@ -3233,7 +3233,7 @@ msgstr "映像トラックのピクセルクロッピングのパラメータを
 #: doc/man/mkvmerge.xml:1813
 #, fuzzy
 #| msgid "<option>--compression</option> <parameter>TID:n</parameter>"
-msgid "<option>--colour-matrix-coefficients</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-matrix-coefficients</option> <parameter>TID:n</parameter>"
 msgstr "<option>--compression</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
@@ -3257,12 +3257,12 @@ msgstr ""
 #: doc/man/mkvmerge.xml:1834
 #, fuzzy
 #| msgid "<option>--compression</option> <parameter>TID:n</parameter>"
-msgid "<option>--colour-bits-per-channel</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-bits-per-channel</option> <parameter>TID:n</parameter>"
 msgstr "<option>--compression</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1837
-msgid "Sets the number of coded bits for a colour channel. A value of <constant>0</constant> indicates that the number of bits is unspecified."
+msgid "Sets the number of coded bits for a color channel. A value of <constant>0</constant> indicates that the number of bits is unspecified."
 msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
@@ -3315,7 +3315,7 @@ msgstr ""
 #: doc/man/mkvmerge.xml:1884
 #, fuzzy
 #| msgid "<option>--compression</option> <parameter>TID:n</parameter>"
-msgid "<option>--colour-range</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-range</option> <parameter>TID:n</parameter>"
 msgstr "<option>--compression</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
@@ -3327,7 +3327,7 @@ msgstr ""
 #: doc/man/mkvmerge.xml:1894
 #, fuzzy
 #| msgid "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
-msgid "<option>--colour-transfer-characteristics</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-transfer-characteristics</option> <parameter>TID:n</parameter>"
 msgstr "<option>--nalu-size-length</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
@@ -3337,19 +3337,19 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1905
-msgid "<constant>0</constant>: reserved, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: reserved, <constant>4</constant>: gamma 2.2 curve, <constant>5</constant>: gamma 2.8 curve, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: linear, <constant>9</constant>: log, <constant>10</constant>: log sqrt, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended colour gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
+msgid "<constant>0</constant>: reserved, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: reserved, <constant>4</constant>: gamma 2.2 curve, <constant>5</constant>: gamma 2.8 curve, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: linear, <constant>9</constant>: log, <constant>10</constant>: log sqrt, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended color gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
 msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1916
 #, fuzzy
 #| msgid "<option>--compression</option> <parameter>TID:n</parameter>"
-msgid "<option>--colour-primaries</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-primaries</option> <parameter>TID:n</parameter>"
 msgstr "<option>--compression</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1919
-msgid "Sets the colour primaries of the video."
+msgid "Sets the color primaries of the video."
 msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
@@ -3397,12 +3397,12 @@ msgstr ""
 #: doc/man/mkvmerge.xml:1967
 #, fuzzy
 #| msgid "<option>--compression</option> <parameter>TID:n</parameter>"
-msgid "<option>--white-colour-coordinates</option> <parameter>TID:x,y</parameter>"
+msgid "<option>--white-color-coordinates</option> <parameter>TID:x,y</parameter>"
 msgstr "<option>--compression</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1970
-msgid "Sets the white colour chromaticity coordinates as defined by CIE 1931."
+msgid "Sets the white color chromaticity coordinates as defined by CIE 1931."
 msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
