--- a/doc/man/po4a/po/zh_TW.po
+++ b/doc/man/po4a/po/zh_TW.po
@@ -3155,8 +3155,8 @@ msgstr "将视频轨道的像素裁减参数设为指定数值。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1813
-msgid "<option>--colour-matrix-coefficients</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-matrix-coefficients</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-matrix-coefficients</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-matrix-coefficients</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1816
@@ -3177,12 +3177,12 @@ msgstr "<constant>0</constant>: GBR, <constant>1</constant>: BT709, <constant>2<
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1834
-msgid "<option>--colour-bits-per-channel</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-bits-per-channel</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-bits-per-channel</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-bits-per-channel</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1837
-msgid "Sets the number of coded bits for a colour channel. A value of <constant>0</constant> indicates that the number of bits is unspecified."
+msgid "Sets the number of coded bits for a color channel. A value of <constant>0</constant> indicates that the number of bits is unspecified."
 msgstr "设置颜色通道编码位数。数值 <constant>0</constant> 表示位数未指定。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
@@ -3227,8 +3227,8 @@ msgstr "设置色度在水平/垂直方向上如何抽样 (<constant>0</constant
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1884
-msgid "<option>--colour-range</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-range</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-range</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-range</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1887
@@ -3237,8 +3237,8 @@ msgstr "设置色域裁剪 (<constant>0</constant>: 未指定, <constant>1</cons
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1894
-msgid "<option>--colour-transfer-characteristics</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-transfer-characteristics</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-transfer-characteristics</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-transfer-characteristics</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1897
@@ -3247,17 +3247,17 @@ msgstr "視訊的傳輸類型。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1905
-msgid "<constant>0</constant>: reserved, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: reserved, <constant>4</constant>: gamma 2.2 curve, <constant>5</constant>: gamma 2.8 curve, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: linear, <constant>9</constant>: log, <constant>10</constant>: log sqrt, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended colour gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
-msgstr "<constant>0</constant>: 保留, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: 保留, <constant>4</constant>: gamma 2.2 曲线, <constant>5</constant>: gamma 2.8 曲线, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: 线性, <constant>9</constant>: 对数, <constant>10</constant>: 对数平方根, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended colour gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
+msgid "<constant>0</constant>: reserved, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: reserved, <constant>4</constant>: gamma 2.2 curve, <constant>5</constant>: gamma 2.8 curve, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: linear, <constant>9</constant>: log, <constant>10</constant>: log sqrt, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended color gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
+msgstr "<constant>0</constant>: 保留, <constant>1</constant>: ITU-R BT.709, <constant>2</constant>: unspecified, <constant>3</constant>: 保留, <constant>4</constant>: gamma 2.2 曲线, <constant>5</constant>: gamma 2.8 曲线, <constant>6</constant>: SMPTE 170M, <constant>7</constant>: SMPTE 240M, <constant>8</constant>: 线性, <constant>9</constant>: 对数, <constant>10</constant>: 对数平方根, <constant>11</constant>: IEC 61966-2-4, <constant>12</constant>: ITU-R BT.1361 extended color gamut, <constant>13</constant>: IEC 61966-2-1, <constant>14</constant>: ITU-R BT.2020 10 bit, <constant>15</constant>: ITU-R BT.2020 12 bit, <constant>16</constant>: SMPTE ST 2084, <constant>17</constant>: SMPTE ST 428-1; <constant>18</constant>: ARIB STD-B67 (HLG)"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1916
-msgid "<option>--colour-primaries</option> <parameter>TID:n</parameter>"
-msgstr "<option>--colour-primaries</option> <parameter>TID:n</parameter>"
+msgid "<option>--color-primaries</option> <parameter>TID:n</parameter>"
+msgstr "<option>--color-primaries</option> <parameter>TID:n</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1919
-msgid "Sets the colour primaries of the video."
+msgid "Sets the color primaries of the video."
 msgstr "設定視訊的主要色彩。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
@@ -3297,12 +3297,12 @@ msgstr "設定由 CIE 1931 定義的紅/綠/藍色度座標。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1967
-msgid "<option>--white-colour-coordinates</option> <parameter>TID:x,y</parameter>"
-msgstr "<option>--white-colour-coordinates</option> <parameter>TID:x,y</parameter>"
+msgid "<option>--white-color-coordinates</option> <parameter>TID:x,y</parameter>"
+msgstr "<option>--white-color-coordinates</option> <parameter>TID:x,y</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1970
-msgid "Sets the white colour chromaticity coordinates as defined by CIE 1931."
+msgid "Sets the white color chromaticity coordinates as defined by CIE 1931."
 msgstr "設定由 CIE 1931 定義的白色色度座標。"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
