--- a/po/cs.po
+++ b/po/cs.po
@@ -268,8 +268,8 @@ msgstr "  --clusters-in-meta-seek  Zapsat meta seek data pro clustery.\n"
 #: src/merge/mkvmerge.cpp:315
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
@@ -281,7 +281,7 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
@@ -294,21 +294,21 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Primární barvy videa.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   Oříznutí barevných rozsahů.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   Oříznutí barevných rozsahů.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, fuzzy, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
 "  --command-line-charset <charset>\n"
@@ -962,8 +962,8 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, fuzzy, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
 "  --split frames:A[,B...]\n"
@@ -4084,7 +4084,7 @@ msgstr "Bitů na kanál"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, fuzzy, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Video: bitů na barevný kanál"
 
 #: src/common/property_element.cpp:213
@@ -4181,12 +4181,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:117
 #, fuzzy, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/common/kax_element_names.cpp:118
 #, fuzzy, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/input/r_vobsub.cpp:549
@@ -4858,54 +4858,54 @@ msgstr "Kodek/Typ MIME"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Informace o barvách"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, fuzzy, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Chyba ukládání informace"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Koeficienty barevné matice"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Koeficienty barevné matice"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Primární barvy"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, fuzzy, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Primární barvy"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Barevný rozsah"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, fuzzy, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Barevný rozsah"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Barevný prostor"
 
 #: src/common/kax_element_names.cpp:134
 #, fuzzy, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Barevný prostor: {0}"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7043,12 +7043,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:115
 #, fuzzy, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/common/kax_element_names.cpp:116
 #, fuzzy, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/common/file_types.cpp:89
@@ -10356,12 +10356,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:113
 #, fuzzy, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/common/kax_element_names.cpp:114
 #, fuzzy, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/common/cli_parser.cpp:193
@@ -11139,7 +11139,7 @@ msgstr ""
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr ""
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12127,12 +12127,12 @@ msgstr "Soukromá data kodeku nesouhlasí. Oba mají stejnou délku ({0}) ale ji
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "Primární barvy videa."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr ""
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14643,12 +14643,12 @@ msgstr "Typ poměru stran videa"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Informace o barvách videa"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Metadata ovládání barev videa"
 
 #: src/common/property_element.cpp:162
@@ -14748,7 +14748,7 @@ msgstr "Stopa videa %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Video: bitů na barevný kanál"
 
 #: src/common/property_element.cpp:190
@@ -14783,17 +14783,17 @@ msgstr ""
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Video: koeficienty barevné matice"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Video: primární barvy"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Video: barevný rozsah"
 
 #: src/common/property_element.cpp:174
@@ -15117,27 +15117,27 @@ msgstr "Kdykoliv uživatel přidá seznam stop, program může automaticky vyhle
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr ""
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr ""
 
 #: src/common/kax_element_names.cpp:119
 #, fuzzy, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/common/kax_element_names.cpp:120
 #, fuzzy, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, fuzzy, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Referenční stav kodeku indexu: {0}"
 
 #: src/common/property_element.cpp:154
@@ -16666,7 +16666,7 @@ msgstr "– Nastavit na žádný –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "Soukromá data kodeku, délka %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Barevný prostor: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
