--- a/po/it.po
+++ b/po/it.po
@@ -281,12 +281,12 @@ msgstr "  --clusters-in-meta-seek  Scrive i dati meta di posizionamento per i cl
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           Imposta il numero di bit codificati per un canale\n"
 "                           colore. Un valore 0 indica che il numero è non\n"
 "                           specificato.\n"
@@ -294,12 +294,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           imposta i coefficienti matrice del video usati\n"
 "                           per ricavare i valori luma e chroma per i\n"
 "                           colori primari rosso,verde e blu.\n"
@@ -307,24 +307,24 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           I colori primari del video.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   Ritaglio intervalli colore.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   Ritaglio intervalli colore.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           Le caratteristiche di trasferimento del video.\n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -981,11 +981,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                          Coordinate cromaticità colore bianco come definito\n"
 "                           da CIE 1931.\n"
 
@@ -4103,7 +4103,7 @@ msgstr "Bit per canale"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Bit per canale colore:"
 
 #: src/common/property_element.cpp:213
@@ -4200,12 +4200,12 @@ msgstr "Coordinata Y cromaticità colore blu come definito da CIE 1931."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Coordinata x colore blu"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Coordinata y colore blu"
 
 #: src/input/r_vobsub.cpp:549
@@ -4876,54 +4876,54 @@ msgstr "Tipo codec/MIME"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Informazioni colore"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Informazioni meta colore mastering"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Coefficienti matrice colore"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Coefficienti di matrice colore:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Colori primari"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Colori primari:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Intervallo colore"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Intervallo colore:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Spazio colore"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Trasferimento colore"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7061,12 +7061,12 @@ msgstr "Coordinata Y cromaticità colore verde come definito da CIE 1931."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Coordinata x colore verde"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Coordinata y colore verde"
 
 #: src/common/file_types.cpp:89
@@ -10362,12 +10362,12 @@ msgstr "Coordinata Y cromaticità colore rosso come definito da CIE 1931."
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Coordinata x colore rosso"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Coordinata y colore rosso"
 
 #: src/common/cli_parser.cpp:193
@@ -11140,7 +11140,7 @@ msgstr "Imposta i coefficienti matrice del video usati per ottenere i valori lum
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Imposta il numero di bit codificati per una canale colore."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12121,12 +12121,12 @@ msgstr "I dati privati del codec non coincidono. Entrambi hanno la stessa lunghe
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "I colori primari del video."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "Le caratteristiche di trasferimento colore del video."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14652,12 +14652,12 @@ msgstr "Tipo rapporto aspetto video"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Informazioni colore video"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Metadati principale colore video"
 
 #: src/common/property_element.cpp:162
@@ -14755,7 +14755,7 @@ msgstr "Traccia video %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Video: bit per colore canale"
 
 #: src/common/property_element.cpp:190
@@ -14790,17 +14790,17 @@ msgstr "Video: cromaticità rosso Y"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Video: coefficienti matrice colore"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Video: colori primari"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Video: intervallo colore"
 
 #: src/common/property_element.cpp:174
@@ -15124,27 +15124,27 @@ msgstr "Ogni volta che l'utente aggiunge una scaletta il programma può automati
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "Coordinata X cromaticità colore bianco come definito da CIE 1931."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "Coordinata Y cromaticità colore bianco come definito da CIE 1931."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Coordinata x colore bianco"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Coordinata y colore bianco"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Coordinate colore bianco:"
 
 #: src/common/property_element.cpp:154
@@ -16719,7 +16719,7 @@ msgstr "-- Imposta a nessuno –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "CodecPrivato, lunghezza %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Matrice colore: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
