--- a/po/nl.po
+++ b/po/nl.po
@@ -274,12 +274,12 @@ msgstr "  --clusters-in-meta-seek  Schrijft meta zoek data voor clusters.\n"
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
-"  --colour-bits-per-channel <TID:n>\n"
+"  --color-bits-per-channel <TID:n>\n"
 "                           Stelt het aantal gecodeerde bits in voor een kleur \n"
 "                           kanaal. Een waarde van 0 geeft aan dat het nummer niet is opgegeven\n"
 "                           uniet is opgegeven.\n"
@@ -287,12 +287,12 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
 msgstr ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Stelt de matrixcoëfficiënten van de gebruikte video in om\n"
 "                           helderheid en kleurintensiteit waarden van rood, groen te\n"
 "                           verkrijgen en en blauwe kleuren kleurruimtes.\n"
@@ -300,24 +300,24 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           De kleuren ruimten van de video.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
-msgstr "  --colour-range <TID:n>   Knippen van de kleurbereiken.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
+msgstr "  --color-range <TID:n>   Knippen van de kleurbereiken.\n"
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           De overdrachtseigenschappen van de video.\n"
 
 #: src/merge/mkvmerge.cpp:392
@@ -969,11 +969,11 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
-"  --white-colour-coordinates <TID:x,y>\n"
+"  --white-color-coordinates <TID:x,y>\n"
 "                           Witte kleur kleurbereik coördinaten zoals gedefinieerd\n"
 "                           door CIE 1931.\n"
 
@@ -4070,7 +4070,7 @@ msgstr "bits per kanaal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, fuzzy, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "Video: bits per kleurkanaal"
 
 #: src/common/property_element.cpp:213
@@ -4167,12 +4167,12 @@ msgstr "Blauw Y-chromaticiteitscoördinaat zoals gedefinieerd door CIE 1931."
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr "Blauwe kleurcoördinaat x"
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr "Blauwe kleurcoördinaat y"
 
 #: src/input/r_vobsub.cpp:549
@@ -4842,54 +4842,54 @@ msgstr "Codec/MIME type"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Kleur informatie"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Informatie over beheersen van kleuren"
 
 #: src/common/kax_element_names.cpp:125
 #, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Kleurmatrixcoëfficiënten"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Kleurmatrixcoëfficiënten"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Basiskleuren"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, fuzzy, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Basiskleuren"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Kleur bereik"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, fuzzy, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Kleur bereik"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Kleur ruimte"
 
 #: src/common/kax_element_names.cpp:134
 #, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Kleur overdracht"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -7027,12 +7027,12 @@ msgstr "Groen Y-chromaticiteitscoördinaat zoals gedefinieerd door CIE 1931."
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr "Groene kleurcoördinaat x"
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr "Groene kleurcoördinaat y"
 
 #: src/common/file_types.cpp:89
@@ -10319,12 +10319,12 @@ msgstr "Rode Y kleur kwaliteit coördinaat gedefinieerd conform CIE 1931."
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr "Rode kleurcoördinaat x"
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr "Rode kleurcoördinaat y"
 
 #: src/common/cli_parser.cpp:193
@@ -11098,7 +11098,7 @@ msgstr "Stelt de matrixcoëfficiënten in van de video die wordt gebruikt om lum
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr "Stelt het aantal gecodeerde bits in voor een kleurkanaal."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -12074,12 +12074,12 @@ msgstr "De codecs privé data komen niet overeen. Hebben beide dezelfde lengte (
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr "De basiskleuren van de video."
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr "De kleuroverdrachtskarakteristieken van de video."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14589,12 +14589,12 @@ msgstr "Video beeldverhouding type"
 
 #: src/common/kax_element_names.cpp:124
 #, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Video kleur informatie"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr "Videokleur controle metadata"
 
 #: src/common/property_element.cpp:162
@@ -14692,7 +14692,7 @@ msgstr "Video spoor %1"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr "Video: bits per kleurkanaal"
 
 #: src/common/property_element.cpp:190
@@ -14727,17 +14727,17 @@ msgstr "Video: kleurintensiteit (chroma) rood Y"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Video: kleurmatrixcoëfficiënten"
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Video: kleuren voor keuzes"
 
 #: src/common/property_element.cpp:178
 #, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Video: kleurbereik"
 
 #: src/common/property_element.cpp:174
@@ -15061,27 +15061,27 @@ msgstr "Telkens wanneer de gebruiker een afspeellijst toevoegt, kan het programm
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr "Coördinaat X witte kleur kwaliteit gedefinieerd conform CIE 1931."
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr "Coördinaat Y witte kleur kwaliteit gedefinieerd conform CIE 1931."
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr "Witte kleurcoördinaat x"
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr "Witte kleurcoördinaat y"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, fuzzy, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Witte kleurcoördinaat x"
 
 #: src/common/property_element.cpp:154
@@ -16641,7 +16641,7 @@ msgstr "– Zet naar niets –"
 #~ msgid "CodecPrivate, length %1%%2%"
 #~ msgstr "CodecPrivé, lengte %1%%2%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Ruimte kleur: %1%"
 
 #~ msgid "Compiled with libebml %1 + libmatroska %2."
