--- a/po/sv.po
+++ b/po/sv.po
@@ -227,8 +227,8 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:315
 #, no-c-format
 msgid ""
-"  --colour-bits-per-channel <TID:n>\n"
-"                           Sets the number of coded bits for a colour \n"
+"  --color-bits-per-channel <TID:n>\n"
+"                           Sets the number of coded bits for a color \n"
 "                           channel. A value of 0 indicates that the number is\n"
 "                           unspecified.\n"
 msgstr ""
@@ -236,7 +236,7 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:311
 #, no-c-format
 msgid ""
-"  --colour-matrix-coefficients <TID:n>\n"
+"  --color-matrix-coefficients <TID:n>\n"
 "                           Sets the matrix coefficients of the video used\n"
 "                           to derive luma and chroma values from red, green\n"
 "                           and blue color primaries.\n"
@@ -245,21 +245,21 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:333
 #, no-c-format
 msgid ""
-"  --colour-primaries <TID:n>\n"
-"                           The colour primaries of the video.\n"
+"  --color-primaries <TID:n>\n"
+"                           The color primaries of the video.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Videons färgprimärer.\n"
 
 #: src/merge/mkvmerge.cpp:330
 #, no-c-format
-msgid "  --colour-range <TID:n>   Clipping of the color ranges.\n"
+msgid "  --color-range <TID:n>   Clipping of the color ranges.\n"
 msgstr ""
 
 #: src/merge/mkvmerge.cpp:331
 #, no-c-format
 msgid ""
-"  --colour-transfer-characteristics <TID:n>\n"
+"  --color-transfer-characteristics <TID:n>\n"
 "                           The transfer characteristics of the video.\n"
 msgstr ""
 
@@ -588,7 +588,7 @@ msgid ""
 "  --projection-pose-pitch <TID:float>\n"
 "                           A pitch rotation to the projection.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Videons färgprimärer.\n"
 
 #: src/merge/mkvmerge.cpp:362
@@ -597,7 +597,7 @@ msgid ""
 "  --projection-pose-roll <TID:float>\n"
 "                           A roll rotation to the projection.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Videons färgprimärer.\n"
 
 #: src/merge/mkvmerge.cpp:358
@@ -606,7 +606,7 @@ msgid ""
 "  --projection-pose-yaw <TID:float>\n"
 "                           A yaw rotation to the projection.\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Videons färgprimärer.\n"
 
 #: src/merge/mkvmerge.cpp:355
@@ -626,7 +626,7 @@ msgid ""
 "  --projection-type <TID:method>\n"
 "                           Projection method used (0–3).\n"
 msgstr ""
-"  --colour-primaries <TID:n>\n"
+"  --color-primaries <TID:n>\n"
 "                           Videons färgprimärer.\n"
 
 #: src/merge/mkvmerge.cpp:276
@@ -808,8 +808,8 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:344
 #, no-c-format
 msgid ""
-"  --white-colour-coordinates <TID:x,y>\n"
-"                           White colour chromaticity coordinates as defined\n"
+"  --white-color-coordinates <TID:x,y>\n"
+"                           White color chromaticity coordinates as defined\n"
 "                           by CIE 1931.\n"
 msgstr ""
 
@@ -3873,7 +3873,7 @@ msgstr "kanaler: {0}"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
 #, fuzzy, no-c-format
-msgid "Bits per colour channel:"
+msgid "Bits per color channel:"
 msgstr "kanaler: {0}"
 
 #: src/common/property_element.cpp:213
@@ -3970,12 +3970,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:117
 #, no-c-format
-msgid "Blue colour coordinate x"
+msgid "Blue color coordinate x"
 msgstr ""
 
 #: src/common/kax_element_names.cpp:118
 #, no-c-format
-msgid "Blue colour coordinate y"
+msgid "Blue color coordinate y"
 msgstr ""
 
 #: src/input/r_vobsub.cpp:549
@@ -4645,54 +4645,54 @@ msgstr "MIME-typ:"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2211
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:619
 #, fuzzy, no-c-format
-msgid "Colour information"
+msgid "Color information"
 msgstr "Videospår"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2175
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2222
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:624
 #, fuzzy, no-c-format
-msgid "Colour mastering meta information"
+msgid "Color mastering meta information"
 msgstr "Fel när informationen skulle sparas"
 
 #: src/common/kax_element_names.cpp:125
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients"
+msgid "Color matrix coefficients"
 msgstr "Videospår"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
 #, fuzzy, no-c-format
-msgid "Colour matrix coefficients:"
+msgid "Color matrix coefficients:"
 msgstr "Videospår"
 
 #: src/common/kax_element_names.cpp:135
 #, fuzzy, no-c-format
-msgid "Colour primaries"
+msgid "Color primaries"
 msgstr "Färgutrymme: {0}"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
 #, fuzzy, no-c-format
-msgid "Colour primaries:"
+msgid "Color primaries:"
 msgstr "Färgutrymme: {0}"
 
 #: src/common/kax_element_names.cpp:133
 #, fuzzy, no-c-format
-msgid "Colour range"
+msgid "Color range"
 msgstr "Färgutrymme: {0}"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
 #, fuzzy, no-c-format
-msgid "Colour range:"
+msgid "Color range:"
 msgstr "Färgutrymme: {0}"
 
 #: src/common/kax_element_names.cpp:161
 #, fuzzy, no-c-format
-msgid "Colour space"
+msgid "Color space"
 msgstr "Färgutrymme: {0}"
 
 #: src/common/kax_element_names.cpp:134
 #, fuzzy, no-c-format
-msgid "Colour transfer"
+msgid "Color transfer"
 msgstr "Färgutrymme: {0}"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:271
@@ -6827,12 +6827,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:115
 #, no-c-format
-msgid "Green colour coordinate x"
+msgid "Green color coordinate x"
 msgstr ""
 
 #: src/common/kax_element_names.cpp:116
 #, no-c-format
-msgid "Green colour coordinate y"
+msgid "Green color coordinate y"
 msgstr ""
 
 #: src/common/file_types.cpp:89
@@ -10116,12 +10116,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
-msgid "Red colour coordinate x"
+msgid "Red color coordinate x"
 msgstr ""
 
 #: src/common/kax_element_names.cpp:114
 #, no-c-format
-msgid "Red colour coordinate y"
+msgid "Red color coordinate y"
 msgstr ""
 
 #: src/common/cli_parser.cpp:193
@@ -10895,7 +10895,7 @@ msgstr ""
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Sets the number of coded bits for a colour channel."
+msgid "Sets the number of coded bits for a color channel."
 msgstr ""
 
 #: src/mkvtoolnix-gui/merge/output.cpp:196
@@ -11871,12 +11871,12 @@ msgstr ""
 
 #: src/common/property_element.cpp:180
 #, no-c-format
-msgid "The colour primaries of the video."
+msgid "The color primaries of the video."
 msgstr ""
 
 #: src/common/property_element.cpp:179
 #, no-c-format
-msgid "The colour transfer characteristics of the video."
+msgid "The color transfer characteristics of the video."
 msgstr ""
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
@@ -14381,12 +14381,12 @@ msgstr ""
 
 #: src/common/kax_element_names.cpp:124
 #, fuzzy, no-c-format
-msgid "Video colour information"
+msgid "Video color information"
 msgstr "Videospår"
 
 #: src/common/kax_element_names.cpp:112
 #, no-c-format
-msgid "Video colour mastering metadata"
+msgid "Video color mastering metadata"
 msgstr ""
 
 #: src/common/property_element.cpp:162
@@ -14484,7 +14484,7 @@ msgstr "Videospår"
 
 #: src/common/property_element.cpp:171
 #, no-c-format
-msgid "Video: bits per colour channel"
+msgid "Video: bits per color channel"
 msgstr ""
 
 #: src/common/property_element.cpp:190
@@ -14519,17 +14519,17 @@ msgstr ""
 
 #: src/common/property_element.cpp:170
 #, fuzzy, no-c-format
-msgid "Video: colour matrix coefficients"
+msgid "Video: color matrix coefficients"
 msgstr "Videospår"
 
 #: src/common/property_element.cpp:180
 #, fuzzy, no-c-format
-msgid "Video: colour primaries"
+msgid "Video: color primaries"
 msgstr "Videospår"
 
 #: src/common/property_element.cpp:178
 #, fuzzy, no-c-format
-msgid "Video: colour range"
+msgid "Video: color range"
 msgstr "Videospår"
 
 #: src/common/property_element.cpp:174
@@ -14853,27 +14853,27 @@ msgstr ""
 
 #: src/common/property_element.cpp:192
 #, no-c-format
-msgid "White colour chromaticity coordinate X as defined by CIE 1931."
+msgid "White color chromaticity coordinate X as defined by CIE 1931."
 msgstr ""
 
 #: src/common/property_element.cpp:193
 #, no-c-format
-msgid "White colour chromaticity coordinate Y as defined by CIE 1931."
+msgid "White color chromaticity coordinate Y as defined by CIE 1931."
 msgstr ""
 
 #: src/common/kax_element_names.cpp:119
 #, no-c-format
-msgid "White colour coordinate x"
+msgid "White color coordinate x"
 msgstr ""
 
 #: src/common/kax_element_names.cpp:120
 #, no-c-format
-msgid "White colour coordinate y"
+msgid "White color coordinate y"
 msgstr ""
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
 #, fuzzy, no-c-format
-msgid "White colour coordinates:"
+msgid "White color coordinates:"
 msgstr "Videospår"
 
 #: src/common/property_element.cpp:154
@@ -16255,7 +16255,7 @@ msgstr ""
 #~ msgid "Codec name: %1%"
 #~ msgstr "Kodeknamn: %1%"
 
-#~ msgid "Colour matrix: %1%"
+#~ msgid "Color matrix: %1%"
 #~ msgstr "Färgutrymme: %1%"
 
 #~ msgid "Countr&y:"
